--- a/stationary_management_system/Properties/launchSettings.json
+++ b/stationary_management_system/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CollegeApp": {
+    "stationary_management_system": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
